@@ -3448,7 +3448,7 @@ STk_instr STk_boot_code [] = {
 0xa,
 0x6e,
 0x2d,
-0x3e1a,
+0x3e1b,
 0x25,
 0x55,
 0xaa,
@@ -17695,7 +17695,7 @@ STk_instr STk_boot_code [] = {
 0x1f,
 0x301,
 0x23,
-0x29,
+0x2a,
 0x3,
 0x25,
 0x67,
@@ -17731,11 +17731,12 @@ STk_instr STk_boot_code [] = {
 0x25,
 0x55,
 0xb2,
+0x67,
 0x55,
 0x303,
 0x6c,
 0x1b4,
-0x2,
+0x3,
 0x24,
 0x1f,
 0x304,
